# CRiS-MPC

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  netwok.sh  run.sh
3pc/: CMakeLists.txt
3pc/arith/: offline_evaluator.h  online_evaluator.h
3pc/circuit/: circuit.h  gate.h
3pc/net/: net3p.h
3pc/utils/: prg3p.h  share.h  types.h
benchmark/: CMakeLists.txt  bench_gate.cpp  bench_linear.cpp  bench_mult.cpp  bench_permsh.cpp  bench_propagate.cpp  bench_sort.cpp  bench_unshuffle.cpp  utils.cpp  utils.h
common/: protocol_runner.h
common/circuit/: circuit.h  gate.h
nph/arith/: offline_evaluator.h  online_evaluator.h
nph/net/: net_np.h
nph/utils/: prg_np.h  share.h  types.h
test/: CMakeLists.txt  README.md  test_shuffle3p.cpp
